--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <title>VeeTasks</title>
   <style>
-    /* CSS for the pin board design and mobile compatibility */
+    /* CSS for the fancy design */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #f2f2f2;
+      background-image: linear-gradient(to bottom right, #ffd700, #000080);
+      background-size: cover;
     }
 
     header {
@@ -45,31 +47,11 @@
       margin-bottom: 20px;
     }
 
-    .todo-list input[type="text"] {
-      padding: 10px;
-      font-size: 16px;
-      margin-right: 10px;
-    }
-
-    .todo-list button {
-      padding: 10px 16px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-
-    .todo-list button.clear {
-      background-color: #ff0000;
-    }
-
     .task-list {
       list-style-type: none;
       padding: 0;
       margin: 0;
-      display: flex;
-      flex-wrap: wrap;
+      position: relative;
     }
 
     .task-list li {
@@ -83,6 +65,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      position: absolute;
     }
 
     .task-list li:hover {
@@ -96,8 +79,10 @@
       margin-bottom: 10px;
     }
 
-    .remove-button {
-      background-color: #ff0000;
+    .remove-button,
+    .record-button,
+    .play-button {
+      background-color: #4CAF50;
       color: #fff;
       border: none;
       padding: 5px 10px;
@@ -106,18 +91,15 @@
       cursor: pointer;
     }
 
+    .play-button {
+      background-color: #ff0000;
+    }
+
     footer {
       background-color: #333;
       color: #fff;
       padding: 20px;
       text-align: center;
-    }
-
-    /* Mobile Compatibility */
-    @media (max-width: 768px) {
-      .task-list li {
-        width: 100%;
-      }
     }
   </style>
 </head>
@@ -180,6 +162,22 @@
           updateTaskOrder();
         });
         listItem.appendChild(removeButton);
+
+        var recordButton = document.createElement("button");
+        recordButton.appendChild(document.createTextNode("Record"));
+        recordButton.classList.add("record-button");
+        listItem.appendChild(recordButton);
+
+        var audioElement = document.createElement("audio");
+        audioElement.controls = true;
+        var playButton = document.createElement("button");
+        playButton.appendChild(document.createTextNode("Play"));
+        playButton.classList.add("play-button");
+        playButton.addEventListener("click", function() {
+          audioElement.play();
+        });
+        listItem.appendChild(audioElement);
+        listItem.appendChild(playButton);
 
         listItem.draggable = true;
         listItem.addEventListener("dragstart", drag);
